examples/test/testpolicy18325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18325
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key16: value5
      key33: value9
      key19: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value15
          key27: value26
          key35: value46
      podSelector:
        matchLabels:
          key4: value37
          key34: value3
